--- a/code/Network_DataWrangling.Rmd
+++ b/code/Network_DataWrangling.Rmd
@@ -10,11 +10,10 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Set Up
+# Set Up
 ```{r set-up}
 # Load necessary packages (install if not present)
-
-packages <- c("tidyverse", "haven", "dplyr")
+packages <- c("tidyverse", "haven", "dplyr", "ggplot2")
 lapply(packages, function(pkg) {
   if (!requireNamespace(pkg, quietly = TRUE)) {
     install.packages(pkg)
@@ -23,92 +22,115 @@ lapply(packages, function(pkg) {
 })
 ```
 
-
-##  Read in Data Wave 1 
-```{r}
+# Read in Data Wave 1 
+```{r data-wave1}
+# create a separate data file for wave 1
 raw_data_wave1 <- read_dta("../data/Evaluaciones_2010.dta")
 
-#Filter data to onky include participant identifier "folio", age "edad_meses" and any column heading starting with cbcl 
-
-data_wave1_f <- raw_data_wave1 %>%
+#Filter data to only include participant identifier (folio), age (edad_meses) and any column heading starting with cbcl (items on the child behaviour checklist)
+data_wave1 <- raw_data_wave1 %>%
   select(folio, edad_meses, starts_with("cbcl"))
+```
+
+## Format Wave 1 Data into Long Format
+```{r long-format-wave1}
+# Convert cbcl to long format for Wave 1 data 
+cbcl_long_wave1 <- data_wave1 %>%
+  pivot_longer(cols = -folio,
+               names_to = "category",
+               values_to = "score")
+
+# Create category labels 
+category_labels <- c(
+  "cbcl1_pb_1" = "Emotional_Reactivity",
+  "cbcl1_pb_2" = "Anxiety_or_Depression",
+  "cbcl1_pb_3" = "Somatic_Complaints",
+  "cbcl1_pb_4" = "Social_Problems",
+  "cbcl1_pb_5" = "Sleep_Problems",
+  "cbcl1_pb_6" = "Attention_Issues",
+  "cbcl1_pb_7" = "Agressive_Conduct",
+  "cbcl1_pb_t" = "Total_CBCL_Score") 
+
+# Change category labels and only include those in the final dataset
+cbcl_long_wave1 <- cbcl_long_wave1 %>%
+  mutate(category = recode(category, !!!category_labels)) %>%
+  filter(category %in% c("Emotional_Reactivity", "Anxiety_or_Depression", "Somatic_Complaints", "Social_Problems", "Sleep_Problems", "Attention_Issues", "Agressive_Conduct", "Total_CBCL_Score"))
 ```
 
 # Read in Data Wave 2
-```{r}
+```{r data-wave2}
+# create a separate data file for wave 2
 raw_data_wave2 <- read_dta("../data/Evaluaciones_2012.dta")
 
-#Filter data to onky include participant identifier "folio", age "edad_meses" and any column heading starting with cbcl 
-
-data_wave2_f <- raw_data_wave2 %>%
+#Filter data to only include participant identifier (folio), age (edad_meses) and any column heading starting with cbcl (items on the child behaviour checklist)
+data_wave2 <- raw_data_wave2 %>%
   select(folio, edad_meses, starts_with("cbcl"))
 ```
 
-#Read in Data Wave 3
-```{r}
+## Format Wave 2 Data into Long Format
+```{r long-format-wave1}
+# Convert cbcl to long format for Wave 1 data 
+cbcl_long_wave2 <- data_wave2 %>%
+  pivot_longer(cols = -folio,
+               names_to = "category",
+               values_to = "score")
+
+# Change category labels and only include those in the final dataset
+cbcl_long_wave2 <- cbcl_long_wave2 %>%
+  mutate(category = recode(category, !!!category_labels)) %>%
+  filter(category %in% c("Emotional_Reactivity", "Anxiety_or_Depression", "Somatic_Complaints", "Social_Problems", "Sleep_Problems", "Attention_Issues", "Agressive_Conduct", "Total_CBCL_Score"))
+```
+
+# Read in Data Wave 3
+```{r data-wave3}
+# create a separate data file for wave 3
 raw_data_wave3 <- read_sav("../data/Evaluaciones_2017.sav")
 
-#Filter data to onky include participant identifier "folio", age "edad_mesesr and any column heading starting with cbcl 
-
-data_wave3_f <- raw_data_wave3 %>%
+#Filter data to only include participant identifier (folio), age (edad_meses) and any column heading starting with cbcl (items on the child behaviour checklist)
+data_wave3 <- raw_data_wave3 %>%
   select(folio, edad_mesesr, starts_with("cbcl"))
 ```
 
-#Read in Data from Wave 1 for Alcohol Use 
-```{r}
+## Format Wave 3 Data into Long Format
+```{r long-format-wave1}
+#Convert cbcl to Long format for Wave 1 data 
+cbcl_long_wave3 <- data_wave3 %>%
+  pivot_longer( cols = -folio,
+                names_to = "category",
+                values_to = "score")
+
+cbcl_long_wave3 <- cbcl_long_wave3 %>%
+  mutate(category = recode(category, !!!category_labels)) %>%
+  filter(category %in% c("Emotional_Reactivity", "Anxiety_or_Depression", "Somatic_Complaints", "Social_Problems", "Sleep_Problems", "Attention_Issues", "Agressive_Conduct", "Total_CBCL_Score")) %>%
+  drop_na()
+```
+
+# Read in Data from Wave 1 for Alcohol Use 
+```{r alcoholuse-wave1}
+# create a separate data file for wave 1 for Alcohol Use
 data_SU_W1 <- read_dta("../data/Entrevistada_2010.dta")
 
 #Filter data to only include participant identifier "folio" and columns with alcohol use report "G9: Asking During pregnancy did you consume an alcoholic beverage?
-
 alcohol_use_data <- data_SU_W1 %>%
   select(folio, starts_with("g9"))
 ```
 
-#Initial Data Exploration Visualisation
-```{r}
-#Distribution of Responses to g9 
+# Data Exploration
+
+## Visualisation of Alcohol Use
+```{r alcohol-use-explorartion}
+# create a bar plot of responses to g9
 ggplot(alcohol_use_data, aes(x = factor(g9))) +
-  geom_bar() +
-  labs(x = "Response to g9", y = "Count", title = "Distribution of Responses to g9")
-
-
-#plot demographics of all these categories, female ratio, socioeconomic status 
+  geom_bar(fill = "#9467bd") +
+  labs(x = "During pregnancy did you consume an alcoholic beverage?", 
+       y = "Count", 
+       title = "Alcohol Use During Pregnancy") +
+  scale_x_discrete(labels = c("Never", "Sporadically", "Regularly", "No Response")) +
+  theme_minimal()
 ```
 
-```{r Wave 1 Data Formatting }
-#Convert cbcl to Long format for Wave 1 data 
-cbcl_long_wave1 <- data_wave1_f %>%
-  pivot_longer(
-    cols = -folio,
-    names_to = "category",
-    values_to = "score"
-  )
-
-#Changing category labels 
-category_labels <- c(
-  "cbcl1_pb_1" = "Emotional Reactivity",
-  "cbcl1_pb_2" = "Anxious/Depressed",
-  "cbcl1_pb_3" = "Somatic Complaints",
-  "cbcl1_pb_4" = "Internalising Behaviours",
-  "cbcl1_pb_5" = "Sleep Problems",
-  "cbcl1_pb_6" = "Attention Issues",
-  "cbcl1_pb_7" = "Agressive Conduct",
-  "cbcl1_pb_t" = "Total Score CBCL") 
-
-cbcl_long_wave1 <- cbcl_long_wave1 %>%
-  mutate(category = recode(category, !!!category_labels)) 
-  
-#Filter Data to only have the categories of "puntaje bruto" raw score per category and total sum of raw scores 
-cbcl_long_wave1 <- cbcl_long_wave1 %>%
-  filter(category %in% c("Emotional Reactivity", "Anxious/Depressed", "Somatic Complaints","Internalising Behaviours", "Sleep Problems", "Attention Issues", "Agressive Conduct", "Total Score CBCL"))
-
-
-```
-
-
-```{r}
-#Spaghetti Plot CBCL Scores of All Participants in Wave 1 separating individual category scores and total scores 
-
+## Visualisation of CBCL Scores across Time
+```{r cbcl-across-waves}
 # Plot without Total Score
 cbcl_long_wave1 %>%
   filter(category != "Total Score CBCL") %>%
@@ -128,10 +150,7 @@ cbcl_long_wave1 %>%
        x = "Participant ID", y = "Total Score") +
   theme_minimal() +
   theme(axis.text.x = element_blank())
-
-
 ```
-
 
 
 ```{r}
@@ -158,69 +177,5 @@ ggplot(subscale_data, aes(x = category, y = score, group = folio)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 #Make spagetti plot considering time variable in the x and faceted by category of the cbcl (one graph for each)
-
-
-```
-```{r Wave 2 Data Formatting}
-#Convert cbcl to Long format for Wave 1 data 
-cbcl_long_wave2 <- data_wave2_f %>%
-  pivot_longer(
-    cols = -folio,
-    names_to = "category",
-    values_to = "score"
-  )
-
-#Changing category labels 
-category_labels <- c(
-  "cbcl1_pb_1" = "Emotional Reactivity",
-  "cbcl1_pb_2" = "Anxious/Depressed",
-  "cbcl1_pb_3" = "Somatic Complaints",
-  "cbcl1_pb_4" = "Internalising Behaviours",
-  "cbcl1_pb_5" = "Sleep Problems",
-  "cbcl1_pb_6" = "Attention Issues",
-  "cbcl1_pb_7" = "Agressive Conduct",
-  "cbcl1_pb_t" = "Total Score CBCL") 
-
-cbcl_long_wave2 <- cbcl_long_wave2 %>%
-  mutate(category = recode(category, !!!category_labels))  
-
-  
-#Filter Data to only have the categories of "puntaje bruto" raw score per category and total sum of raw scores 
-cbcl_long_wave2 <- cbcl_long_wave2 %>%
-  filter(category %in% c("Emotional Reactivity", "Anxious/Depressed", "Somatic Complaints","Internalising Behaviours", "Sleep Problems", "Attention Issues", "Agressive Conduct", "Total Score CBCL"))
-```
-
-
-
-```{r Wave 3 Data Formatting}
-#Convert cbcl to Long format for Wave 1 data 
-cbcl_long_wave3 <- data_wave3_f %>%
-  pivot_longer(
-    cols = -folio,
-    names_to = "category",
-    values_to = "score"
-  )
-
-#Changing category labels 
-category_labels <- c(
-  "cbcl1_pb_1" = "Emotional Reactivity",
-  "cbcl1_pb_2" = "Anxious/Depressed",
-  "cbcl1_pb_3" = "Somatic Complaints",
-  "cbcl1_pb_4" = "Internalising Behaviours",
-  "cbcl1_pb_5" = "Sleep Problems",
-  "cbcl1_pb_6" = "Attention Issues",
-  "cbcl1_pb_7" = "Agressive Conduct",
-  "cbcl1_pb_t" = "Total Score CBCL") 
-
-cbcl_long_wave3 <- cbcl_long_wave3 %>%
-  mutate(category = recode(category, !!!category_labels)) 
-
-
-  
-#Filter Data to only have the categories of "puntaje bruto" raw score per category and total sum of raw scores 
-cbcl_long_wave3 <- cbcl_long_wave3 %>%
-  filter(category %in% c("Emotional Reactivity", "Anxious/Depressed", "Somatic Complaints","Internalising Behaviours", "Sleep Problems", "Attention Issues", "Agressive Conduct", "Total Score CBCL"))
-
-cbcl_long_wave3  <- cbcl_long_wave3  %>% drop_na()
 ```
 
