--- a/code/W1-Network.Rmd
+++ b/code/W1-Network.Rmd
@@ -3,7 +3,9 @@ title: "W1 Network"
 output: html_notebook
 ---
 
-```{r Load Packages }
+# Set Up
+```{r Load-Packages}
+# load in libraries and install if necessary
 packages <- c("tidyverse", "haven", "dplyr","igraph", "reshape2", "qgraph")
 lapply(packages, function(pkg) {
   if (!requireNamespace(pkg, quietly = TRUE)) {
@@ -13,16 +15,18 @@ lapply(packages, function(pkg) {
 })
 ```
 
-```{r Wave 1 data Formating}
+## Data Formatting
+```{r Wave-1-data-formating}
 #Convert wave 1 data cbcl with new category labels and excluding total score to wide format 
-
 cbcl_wide_wave1 <- cbcl_long_wave1 %>%
-  filter(category != "Total Score CBCL") %>%  # optional: exclude total
+  filter(category != "Total_CBCL_Score") %>%  # optional: exclude total
   pivot_wider(names_from = category, values_from = score)
 ```
 
 
+# Visualisation 
 
+## igraph
 ```{r Plotting Network using igraph}
 
 # Correlation Matrix
@@ -40,19 +44,16 @@ g <- graph_from_data_frame(corr_edges, directed = FALSE)
 
 #Renaming Variables for Plotting of Network 
 name_mapping <- c(
-  "Attention Issues" = "AT",
-  "Agressive Conduct" = "AGR",
-  "Sleep Problems" = "SP",
-  "Emotional Reactivity" = "ER",
-  "Internalising Behaviours" = "IB",
-  "Anxious/Depressed" = "AD",
-  "Somatic Complaints" = "SC"
-)
+  "Attention_Issues" = "AT",
+  "Agressive_Conduct" = "AGR",
+  "Sleep_Problems" = "SP",
+  "Emotional_Reactivity" = "ER",
+  "Social_Problems" = "SC",
+  "Anxiety_or_Depression" = "AD",
+  "Somatic_Complaints" = "SC")
 
 # Apply custom labels for plotting
 V(g)$label <- name_mapping[V(g)$name]
-
-
 
 # Plot Network
 plot(
@@ -65,17 +66,12 @@ plot(
   vertex.color = "lightblue",
   edge.width = abs(E(g)$Freq) * 6,
   edge.color = "gray60",
-  main = "CBCL Symptom Correlation Network (r > 0.4)"
-)
-
-
+  main = "CBCL Symptom Correlation Network (r > 0.4)")
 ```
 
 
-
+## qgraph
 ```{r Plotting Network using Lasso + Centrality Analysis from (Fritz et al, 2020)}
-
-
 # Step 1 Create Correlation matrix (excluding 'folio')
 symptom_data <- cbcl_wide_wave1 %>% select(-folio) #filtering participant ID 
 symptom_corr <- cor(symptom_data, use = "pairwise.complete.obs") # cor function computes the correlation between columns x and y,  "pairwise.complete.obsc omputes each pairwise correlation using only the rows (observations) that have non-missing values for that pair of variables
@@ -97,41 +93,10 @@ symptom_glasso <- qgraph(
   label.cex = 1.1,
   legend = TRUE,
   legend.cex= 0.5,
-  main = "CBCL Symptom Network (Graphical Lasso, r > 0.5)"
-)
-
-#Centrality Measure Analysis 
-#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
-W1_Centrality <- centrality_auto(symptom_glasso)
-print(W1_Centrality)
-
-
+  main = "CBCL Symptom Network (Graphical Lasso, r > 0.5)")
 ```
-Interpretation of Centrality Measures for Wave 1 data Answering Hypothesis 2 and 3 
-- Emotional Reactivity (EmR) is the most central symptom:
-    Highest strength (sum of all absolute edge weights connected to a node) and expected influence.
-    Highest closeness (inverse of average distance to all nodes, the higher the value the quickest the access to all other nodes)
-    High betweenness → acts as a bridge between symptoms.
-    
--Aggressive Conduct (AgC):
-  Second most central.
-  Also has high betweenness and strength.
-  Likely a secondary target — it's well connected and bridges others.
-  
--Somatic Complaints (SmC), Internalising Behaviours (InB), and Sleep Problems (SlP):
-  Lower in all metrics.
-  Likely peripheral symptoms — less influence on the broader network.
-  
--Anxious/Depressed (A/D):
-  Moderate strength but zero betweenness.
-  Not a bridge but still relatively well connected.
 
-Betweeness Centrality (paths most traveled when shortest paths are calculated)
-EmR ↔ AgC — most central bridge in the network (score: 10)
-AgC ↔ AtI — 2nd most important (score: 6)
-EmR ↔ InB and EmR ↔ SmC — also important (score: 4–5)
-
-
+# Hypothesis 1
 ```{r Calcualting Global Network Strength, Hypothesis 1 }
 #Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
 edge_weights_matrix <- getWmat(symptom_glasso) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
@@ -141,11 +106,46 @@ edge_weights_matrix <- getWmat(symptom_glasso) #In resulting adjacency matrix ea
 
 global_network_strength_W1 <- sum(abs(edge_weights_matrix[upper.tri(edge_weights_matrix)]))
 print(global_network_strength_W1)
-
-
 ```
+
+
+# Hypothesis 2 and 3 Wave 1
+```{r Centrality and EI}
+#Centrality Measure Analysis 
+#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
+W1_Centrality <- centrality_auto(symptom_glasso)
+print(W1_Centrality)
+```
+
+Interpretation of Centrality Measures for Wave 1 data answering Hypothesis 2 and 3: 
+- Emotional Reactivity (EmR) is the most central symptom:
+    Highest strength (sum of all absolute edge weights connected to a node) and expected influence.
+    Highest closeness (inverse of average distance to all nodes, the higher the value the quickest the access to all other nodes)
+    High betweenness → acts as a bridge between symptoms.
+    
+- Aggressive Conduct (AgC):
+  Second most central.
+  Also has high betweenness and strength.
+  Likely a secondary target — it's well connected and bridges others.
+  
+- Somatic Complaints (SmC), Internalising Behaviours (InB), and Sleep Problems (SlP):
+  Lower in all metrics.
+  Likely peripheral symptoms — less influence on the broader network.
+  
+- Anxious/Depressed (A/D):
+  Moderate strength but zero betweenness.
+  Not a bridge but still relatively well connected.
+
+Betweeness Centrality (paths most traveled when shortest paths are calculated)
+EmR ↔ AgC — most central bridge in the network (score: 10)
+AgC ↔ AtI — 2nd most important (score: 6)
+EmR ↔ InB and EmR ↔ SmC — also important (score: 4–5)
+
+
+
+# Hypothesis 4 
 ```{r Calcualting Q-index Modularity}
-#Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
+# Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
 # Convert edge weight adjacency matrix from above to igraph object
 g <- graph_from_adjacency_matrix(edge_weights_matrix, mode = "undirected", weighted = TRUE, diag = FALSE)
@@ -160,7 +160,5 @@ community <- cluster_walktrap(g, weights = E(g)$weight)
 
 modularity_Q_W1 <- modularity(community)
 print(modularity_Q_W1)
-
-
 ```
 
