--- a/code/W2-Network.Rmd
+++ b/code/W2-Network.Rmd
@@ -4,7 +4,9 @@ output: html_document
 date: "2025-06-16"
 ---
 
+# Set Up
 ```{r Load Packages}
+# load and install packages if necessary
 packages <- c("tidyverse", "haven", "dplyr","igraph", "reshape2", "qgraph")
 lapply(packages, function(pkg) {
   if (!requireNamespace(pkg, quietly = TRUE)) {
@@ -14,14 +16,17 @@ lapply(packages, function(pkg) {
 })
 ```
 
+## Data Formatting
 ```{r Wave 2 data Formating}
 #Convert wave 2 data cbcl with new category labels and excluding total score to wide format 
-
 cbcl_wide_wave2 <- cbcl_long_wave2 %>%
-  filter(category != "Total Score CBCL") %>%  # optional: exclude total
+  filter(category != "Total_Score_CBCL") %>%  # exclude total
   pivot_wider(names_from = category, values_from = score)
 ```
 
+# Visualisation 
+
+## qgraph
 ```{r Plotting Network using Lasso + Centrality Analysis from (Fritz et al, 2020)}
 # Step 1 Create Correlation matrix (excluding 'folio')
 symptom_data2 <- cbcl_wide_wave2 %>% select(-folio) #filtering participant ID 
@@ -44,16 +49,11 @@ symptom_glasso2 <- qgraph(
   label.cex = 1.1,
   legend = TRUE,
   legend.cex= 0.5,
-  main = "CBCL Symptom Network (Graphical Lasso, r > 0.4)"
-)
-
-#Centrality Measure Analysis 
-#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
-W2_Centrality <- centrality_auto(symptom_glasso)
-print(W2_Centrality)
+  main = "CBCL Symptom Network (Graphical Lasso, r > 0.4)")
 ```
+# Hypothesis 1
 
-```{r Calcualting Global Network Strength, Hypothesis 1 }
+```{r Calcualting Global Network Strength}
 #Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
 edge_weights_matrix2 <- getWmat(symptom_glasso2) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
 
@@ -62,12 +62,21 @@ edge_weights_matrix2 <- getWmat(symptom_glasso2) #In resulting adjacency matrix 
 
 global_network_strength_W2 <- sum(abs(edge_weights_matrix2[upper.tri(edge_weights_matrix2)]))
 print(global_network_strength_W2)
-
-
 ```
 
+# Hypothesis 2 and 3
+
+```{r centrality measures and EI}
+#Centrality Measure Analysis 
+#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
+W2_Centrality <- centrality_auto(symptom_glasso)
+print(W2_Centrality)
+```
+Emotional regulation remains as the most central symptom (highest strength, closeness, betweenness, EI), followed by aggressive conduct. Patterns of the first wave remain, and there appears to be little flexibility/ change between the first two waves. The CBCL appears to be mainly driven by emotional regulation and aggressive conduct.
+
+# Hypothesis 4
 ```{r Calcualting Q-index Modularity}
-#Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
+# Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
 # Convert edge weight adjacency matrix from above to igraph object
 g <- graph_from_adjacency_matrix(edge_weights_matrix2, mode = "undirected", weighted = TRUE, diag = FALSE)
@@ -82,6 +91,5 @@ community2 <- cluster_walktrap(g, weights = E(g)$weight)
 
 modularity_Q_W2 <- modularity(community2)
 print(modularity_Q_W2)
-
 ```
-
+The network appears to evolve into a more random, less structured form. 
