--- a/code/W3-Network.Rmd
+++ b/code/W3-Network.Rmd
@@ -4,9 +4,9 @@ output: html_document
 date: "2025-06-16"
 ---
 
-
-
+# Set Up
 ```{r Load Packages}
+# load and install packages if needed
 packages <- c("tidyverse", "haven", "dplyr","igraph", "reshape2", "qgraph")
 lapply(packages, function(pkg) {
   if (!requireNamespace(pkg, quietly = TRUE)) {
@@ -15,16 +15,17 @@ lapply(packages, function(pkg) {
   library(pkg, character.only = TRUE)
 })
 ```
-
+## Data Formatting
 ```{r Wave 3 data Formating}
 #Convert wave 2 data cbcl with new category labels and excluding total score to wide format 
-
 cbcl_wide_wave3 <- cbcl_long_wave3 %>%
-  filter(category != "Total Score CBCL") %>%  # optional: exclude total
+  filter(category != "Total_Score_CBCL") %>%  # optional: exclude total
   pivot_wider(names_from = category, values_from = score)
 ```
 
+# Visualisation
 
+## qgraph
 ```{r Plotting Network using Lasso + Centrality Analysis from (Fritz et al, 2020)}
 # Step 1 Create Correlation matrix (excluding 'folio')
 symptom_data3 <- cbcl_wide_wave3 %>% select(-folio) #filtering participant ID 
@@ -47,16 +48,9 @@ symptom_glasso3 <- qgraph(
   label.cex = 1.1,
   legend = TRUE,
   legend.cex= 0.5,
-  main = "CBCL Symptom Network (Graphical Lasso, r > 0.4)"
-)
-
-#Centrality Measure Analysis 
-#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
-W3_Centrality <- centrality_auto(symptom_glasso)
-print(W3_Centrality)
+  main = "CBCL Symptom Network (Graphical Lasso, r > 0.4)")
 ```
-
-
+# Hypothesis 1
 ```{r Calcualting Global Network Strength, Hypothesis 1 }
 #Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
 edge_weights_matrix3 <- getWmat(symptom_glasso3) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
@@ -66,10 +60,17 @@ edge_weights_matrix3 <- getWmat(symptom_glasso3) #In resulting adjacency matrix 
 
 global_network_strength_W3 <- sum(abs(edge_weights_matrix3[upper.tri(edge_weights_matrix3)]))
 print(global_network_strength_W3)
-
-
 ```
 
+# Hypothesis 2 and 3
+```{r centrality measures and EI}
+#Centrality Measure Analysis 
+#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
+W3_Centrality <- centrality_auto(symptom_glasso3)
+print(W3_Centrality)
+```
+
+# Hypothesis 4
 ```{r Calcualting Q-index Modularity}
 #Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
@@ -86,5 +87,4 @@ community3 <- cluster_walktrap(g, weights = E(g)$weight)
 
 modularity_Q_W3 <- modularity(community3)
 print(modularity_Q_W3)
-
 ```
