--- a/code/W3-Network.Rmd
+++ b/code/W3-Network.Rmd
@@ -19,7 +19,7 @@ lapply(packages, function(pkg) {
 ```{r Wave 3 data Formating}
 #Convert wave 2 data cbcl with new category labels and excluding total score to wide format 
 cbcl_wide_wave3 <- cbcl_long_wave3 %>%
-  filter(category != "Total_CBCL_Score") %>%  # optional: exclude total
+  filter(category != "Total_CBCL_S") %>%  # optional: exclude total
   pivot_wider(names_from = category, values_from = score)
 ```
 
@@ -69,6 +69,8 @@ print(global_network_strength_W3)
 W3_Centrality <- centrality_auto(symptom_glasso3)
 print(W3_Centrality)
 ```
+Centrality and EI does not seem to differ between wave 2 and 3.
+
 
 # Hypothesis 4
 ```{r Calcualting Q-index Modularity}
