changing g labels to gW2

--- a/code/W2-Network.Rmd
+++ b/code/W2-Network.Rmd
@@ -78,13 +78,13 @@ Emotional regulation remains as the most central symptom (highest strength, clos
 # Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
 # Convert edge weight adjacency matrix from above to igraph object
-g <- graph_from_adjacency_matrix(edge_weights_matrix2, mode = "undirected", weighted = TRUE, diag = FALSE)
+gW2 <- graph_from_adjacency_matrix(edge_weights_matrix2, mode = "undirected", weighted = TRUE, diag = FALSE)
 
 #Convert edge weights to absolute values (lasso does allow for negative weight values)
-E(g)$weight <- abs(E(g)$weight)
+E(gW2)$weight <- abs(E(gW2)$weight)
 
 #Cluster_walktrap function tries to find densley connected subgraphs "communities" in a graph via random walks. The idea is that short random walks tend to stay in the same community 
-community2 <- cluster_walktrap(g, weights = E(g)$weight)
+community2 <- cluster_walktrap(gW2, weights = E(gW2)$weight)
 
 #Modularity function calculates how modular is a given division of a graph into subgraphs, from (McElroy et al) Q index >0.3 suggesting nodes are arranged in non-random communities 
 
