change labels g to gW3

--- a/code/W3-Network.Rmd
+++ b/code/W3-Network.Rmd
@@ -77,13 +77,13 @@ Centrality and EI does not seem to differ between wave 2 and 3.
 #Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
 # Convert edge weight adjacency matrix from above to igraph object
-g <- graph_from_adjacency_matrix(edge_weights_matrix3, mode = "undirected", weighted = TRUE, diag = FALSE)
+gW3 <- graph_from_adjacency_matrix(edge_weights_matrix3, mode = "undirected", weighted = TRUE, diag = FALSE)
 
 #Convert edge weights to absolute values (lasso does allow for negative weight values)
-E(g)$weight <- abs(E(g)$weight)
+E(gW3)$weight <- abs(E(gW3)$weight)
 
 #Cluster_walktrap function tries to find densley connected subgraphs "communities" in a graph via random walks. The idea is that short random walks tend to stay in the same community 
-community3 <- cluster_walktrap(g, weights = E(g)$weight)
+community3 <- cluster_walktrap(gW3, weights = E(gW3)$weight)
 
 #Modularity function calculates how modular is a given division of a graph into subgraphs, from (McElroy et al) Q index >0.3 suggesting nodes are arranged in non-random communities 
 
