--- a/W2-Network-Stratified.Rmd
+++ b/W2-Network-Stratified.Rmd
@@ -19,3 +19,160 @@ lapply(packages, function(pkg) {
   library(pkg, character.only = TRUE)
 })
 ```
+
+## Data Formatting
+```{r Stratifying Data from Wave 2}
+#Merging Subsets with CBCL Data from Wave 2
+W1_cbcl_alcohol_use <- merge(alcohol_group, cbcl_wide_wave2, by = "folio")
+
+# Merge group 1 or 8 with CBCL wide data
+W1_cbcl_no_alcohol<- merge(no_alcohol_group, cbcl_wide_wave2, by = "folio")
+```
+
+# Visualisation
+
+## Alcohol Use 
+```{r Network for Alcohol Use Group W2}
+#Plotting Network using Lasso + Centrality Analysis from (Fritz et al, 2020)}
+
+# Step 1 Create Correlation matrix (excluding 'folio')
+symptom_data2SA <- W1_cbcl_alcohol_use  %>% select(-folio, -g9) #filtering participant ID 
+symptom_corr2SA <- cor(symptom_data2SA, use = "pairwise.complete.obs") # cor function computes the correlation between columns x and y,  "pairwise.complete.obscomputes each pairwise correlation using only the rows (observations) that have non-missing values for that pair of variables
+
+# Step 2 Apply graphical lasso using qgraph
+# This automatically estimates a regularized partial correlation network
+symptom_glasso2SA <- qgraph(
+  symptom_corr2SA,
+  graph = "glasso",#obtain an optimal sparse estimate of the partial correlation matrix using the glasso package (Friedman, Hastie and Tibshirani, 2011)
+  sampleSize = nrow(symptom_data2SA),
+  layout = "spring",  # "spring" gives a force embedded layout, other options are "circle" or "groups", in fritz paper she used "layout"
+  details = TRUE,
+  minimum = 0.1,      # filter edges below this value not sure if we should filter for a maximum too 
+  edge.color = "skyblue",
+  edge.width = 1,     # qgraph auto scales edge widths
+  nodeNames = colnames(symptom_corr2SA),
+  theme = "Hollywood",
+  fade = FALSE,
+  label.cex = 1.1,
+  legend = TRUE,
+  legend.cex= 0.5,
+  main = "CBCL Symptom Network Alcohol Use Group (Graphical Lasso, r > 0.4)"
+)
+```
+
+## No Alcohol Use
+```{r}
+#Plotting Network using Lasso + Centrality Analysis from (Fritz et al, 2020)}
+
+# Step 1 Create Correlation matrix (excluding 'folio')
+symptom_data2SN <- W1_cbcl_no_alcohol  %>% select(-folio, -g9) #filtering participant ID 
+symptom_corr2SN <- cor(symptom_data2SN, use = "pairwise.complete.obs") # cor function computes the correlation between columns x and y,  "pairwise.complete.obscomputes each pairwise correlation using only the rows (observations) that have non-missing values for that pair of variables
+
+# Step 2 Apply graphical lasso using qgraph
+# This automatically estimates a regularized partial correlation network
+symptom_glasso2SN <- qgraph(
+  symptom_corr2SN,
+  graph = "glasso",#obtain an optimal sparse estimate of the partial correlation matrix using the glasso package (Friedman, Hastie and Tibshirani, 2011)
+  sampleSize = nrow(symptom_data2SN),
+  layout = "spring",  # "spring" gives a force embedded layout, other options are "circle" or "groups", in fritz paper she used "layout"
+  details = TRUE,
+  minimum = 0.1,      # filter edges below this value not sure if we should filter for a maximum too 
+  edge.color = "skyblue",
+  edge.width = 1,     # qgraph auto scales edge widths
+  nodeNames = colnames(symptom_corr2SN),
+  theme = "Hollywood",
+  fade = FALSE,
+  label.cex = 1.1,
+  legend = TRUE,
+  legend.cex= 0.5,
+  main = "CBCL Symptom Network Alcohol Use Group (Graphical Lasso, r > 0.4)")
+
+```
+## Side-by-side of stratified networks 
+```{r side-by-side of stratified networks}
+# add here
+
+```
+
+
+# Hypothesis 1
+## Alcohol Use 
+```{r Calcualting Global Network Strength}
+#Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
+edge_weights_matrixW2SA <- getWmat(symptom_glasso2SA) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
+
+# Calculating global strength by using calculated edge weight adjacency matrix from above, excludes diagnoal (repeated relationships), extracts only unique edge weights, takes their absolute value and adds them all up thus global network  strength = sum of absolute edge weights
+#Once we wave the global connectivity for other waves we can compare to see if other waves have greater or decreased symptomp connectivity 
+
+global_network_strength_W2SA <- sum(abs(edge_weights_matrixW2SA[upper.tri(edge_weights_matrixW2SA)]))
+print(global_network_strength_W2SA)
+```
+
+## No Alcohol Use
+```{r Calcualting Global Network Strength}
+#Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
+edge_weights_matrixW2SN <- getWmat(symptom_glasso2SN) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
+
+# Calculating global strength by using calculated edge weight adjacency matrix from above, excludes diagnoal (repeated relationships), extracts only unique edge weights, takes their absolute value and adds them all up thus global network  strength = sum of absolute edge weights
+#Once we wave the global connectivity for other waves we can compare to see if other waves have greater or decreased symptomp connectivity 
+
+global_network_strength_W2SN <- sum(abs(edge_weights_matrixW2SN[upper.tri(edge_weights_matrixW2SN)]))
+print(global_network_strength_W2SN)
+```
+
+# Hypothesis 2 and 3
+## Alcohol Use
+```{r centrality measures and EI}
+#Centrality Measure Analysis 
+#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
+W2SA_Centrality <- centrality_auto(symptom_glasso2SA)
+print(W2SA_Centrality)
+```
+
+## No Alcohol Use
+```{r centrality measures and EI}
+#Centrality Measure Analysis 
+#Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
+W2SN_Centrality <- centrality_auto(symptom_glasso2SN)
+print(W2SN_Centrality)
+```
+
+
+# Hypothesis 4
+## Alcohol Use
+```{r Calcualting Q-index Modularity}
+#Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
+
+# Convert edge weight adjacency matrix from above to igraph object
+gW2SA <- graph_from_adjacency_matrix(edge_weights_matrixW2SA, mode = "undirected", weighted = TRUE, diag = FALSE)
+
+#Convert edge weights to absolute values (lasso does allow for negative weight values)
+E(gW2SA)$weight <- abs(E(gW2SA)$weight)
+
+#Cluster_walktrap function tries to find densley connected subgraphs "communities" in a graph via random walks. The idea is that short random walks tend to stay in the same community 
+communityW2SA <- cluster_walktrap(gW2SA, weights = E(gW2SA)$weight)
+
+#Modularity function calculates how modular is a given division of a graph into subgraphs, from (McElroy et al) Q index >0.3 suggesting nodes are arranged in non-random communities 
+
+modularity_Q_W2SA <- modularity(communityW2SA)
+print(modularity_Q_W2SA)
+```
+
+## No Alcohol Use
+```{r Calcualting Q-index Modularity}
+#Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
+
+# Convert edge weight adjacency matrix from above to igraph object
+gW2SN <- graph_from_adjacency_matrix(edge_weights_matrixW2SN, mode = "undirected", weighted = TRUE, diag = FALSE)
+
+#Convert edge weights to absolute values (lasso does allow for negative weight values)
+E(gW2SN)$weight <- abs(E(gW2SN)$weight)
+
+#Cluster_walktrap function tries to find densley connected subgraphs "communities" in a graph via random walks. The idea is that short random walks tend to stay in the same community 
+communityW2SN <- cluster_walktrap(gW2SN, weights = E(gW2SN)$weight)
+
+#Modularity function calculates how modular is a given division of a graph into subgraphs, from (McElroy et al) Q index >0.3 suggesting nodes are arranged in non-random communities 
+
+modularity_Q_W2SN <- modularity(communityW2SN)
+print(modularity_Q_W2SN)
+```
