--- a/code/W2-Network-Stratified.Rmd
+++ b/code/W2-Network-Stratified.Rmd
@@ -156,7 +156,7 @@ print(global_network_strength_W2SA)
 ```
 
 ## No Alcohol Use
-```{r Calcualting Global Network Strength}
+```{r Calcualting Global Network Strength NAU }
 #Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
 edge_weights_matrixW2SN <- getWmat(symptom_glasso2SN) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
 
@@ -177,7 +177,7 @@ print(W2SA_Centrality)
 ```
 
 ## No Alcohol Use
-```{r centrality measures and EI}
+```{r centrality measures and EI NAU}
 #Centrality Measure Analysis 
 #Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
 W2SN_Centrality <- centrality_auto(symptom_glasso2SN)
@@ -206,7 +206,7 @@ print(modularity_Q_W2SA)
 ```
 
 ## No Alcohol Use
-```{r Calcualting Q-index Modularity}
+```{r Calcualting Q-index Modularity NAU}
 #Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
 # Convert edge weight adjacency matrix from above to igraph object
