chunk name edit so pipeline script runs

--- a/code/W3-Network-Stratified.Rmd
+++ b/code/W3-Network-Stratified.Rmd
@@ -154,7 +154,7 @@ print(global_network_strength_W3SA)
 ```
 
 ## No Alcohol Use
-```{r Calcualting Global Network Strength}
+```{r Calcualting Global Network Strength NAU}
 #Use the getWmat to extract the weight matrix (edge weights) from a qgraph object 
 edge_weights_matrixW3SN <- getWmat(symptom_glasso3SN) #In resulting adjacency matrix each cell represents the edge weight correlation between variables can be positive (direct relationship ) or negative (inverse relationship) or 0 (no edge)
 
@@ -175,7 +175,7 @@ print(W3SA_Centrality)
 ```
 
 ## No Alcohol Use
-```{r centrality measures and EI}
+```{r centrality measures and EI NAU}
 #Centrality Measure Analysis 
 #Output table gives: betweenness centrality, closeness, strength, expected influence, shortest path length 
 W3SN_Centrality <- centrality_auto(symptom_glasso3SN)
@@ -204,7 +204,7 @@ print(modularity_Q_W3SA)
 ```
 
 ## No Alcohol Use
-```{r Calcualting Q-index Modularity}
+```{r Calcualting Q-index Modularity NAU}
 #Modularity measures the strength of division of a network into modules (i.e., communities or clusters). A higher Q (typically 0.3–0.7) indicates a clearer, well-separated modular structure.
 
 # Convert edge weight adjacency matrix from above to igraph object
